--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <!--banner条-->
             <div id="banner">
 
-                    <img src="images/SJTU-IWCT.png" alt="上海交大无线所">
+                    <img src="SJTU-IWCT.png" alt="上海交大无线所">
 
                     <h1>Shanghai Jiao Tong University</h1>
                     <h2>School of Electronical information & electronical engineering</h2>
@@ -39,7 +39,7 @@
             
             <!--上边左侧栏-->
             <div id="leftup">
-            <img src="images/chengli.jpg" alt="Cheng Li">
+            <img src="chengli.jpg" alt="Cheng Li">
             </div>
  
             
