--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             <div id="leftdown">
                 <h1>  Brief Experiences</h1>
                 <ul>
-                <li>Cheng Li professor</li>
+                <li>Cheng Li was born in a village in Hubei province.</li>
                 <li>Dr. </li>
                 <li>From....</li>
                 <li>From....</li>
@@ -70,7 +70,7 @@
             <div id="rightdown">
             <h1>Recent News!</h1> 
             <ul>
-                <li>Cheng Li</li>
+                <li>My homepage was just published! I am so excited! Updates will be released soon!</li>
                 <li>Dr. </li>
                 <li>From....</li>
                 <li>From....</li>
