--- a/Menu.html
+++ b/Menu.html
@@ -1,6 +1,6 @@
 <table border="0.5">
 <tr>
-<td align="center"><a href="home.html" target="content"> Home</td>
+<td align="center"><a href="Home.html" target="content"> Home</td>
 </tr>
 <tr>
 <td align="center"><a href="Publication.html" target="content">Publication</td>
